--- a/manifest.json
+++ b/manifest.json
@@ -1,83 +1,99 @@
 {
-  "id": "kanale-shqip-addon",
+  "id": "org.goglatestremio.kanaleshqip",
   "version": "1.0.0",
   "name": "Kanale Shqip",
-  "description": "Stremio addon that provides live 24/7 Albanian TV channels.",
-  "types": ["video"],
+  "description": "A Stremio addon to stream live Albanian TV channels",
+  "resources": [
+    {
+      "type": "video",
+      "name": "Klan",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261956.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "Top Channel",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261954.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "Rtsh 1",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261964.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "Rtsh 2",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261965.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "Film Aksion",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262027.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "Tring Super",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262039.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "Super Sport 2",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262222.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "Tring Sport 1",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262243.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "National Geographic HD",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262189.m3u8"
+    },
+    {
+      "type": "video",
+      "name": "Discovery Channel HD",
+      "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262191.m3u8"
+    }
+  ],
   "categories": [
     {
+      "id": "gjenerale",
       "name": "Gjenerale",
-      "items": [
-        {
-          "name": "Klan",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261956.m3u8"
-        },
-        {
-          "name": "Top Channel",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261954.m3u8"
-        }
+      "resources": [
+        "Klan",
+        "Top Channel"
       ]
     },
     {
+      "id": "kombetare",
       "name": "Kombetare",
-      "items": [
-        {
-          "name": "Rtsh 1",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261964.m3u8"
-        },
-        {
-          "name": "Rtsh 2",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261965.m3u8"
-        }
+      "resources": [
+        "Rtsh 1",
+        "Rtsh 2"
       ]
     },
     {
+      "id": "filma",
       "name": "Filma",
-      "items": [
-        {
-          "name": "Film Aksion",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262027.m3u8"
-        },
-        {
-          "name": "Tring Super",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262039.m3u8"
-        }
+      "resources": [
+        "Film Aksion",
+        "Tring Super"
       ]
     },
     {
+      "id": "sport",
       "name": "Sport",
-      "items": [
-        {
-          "name": "Super Sport 2",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262222.m3u8"
-        },
-        {
-          "name": "Tring Sport 1",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262243.m3u8"
-        }
+      "resources": [
+        "Super Sport 2",
+        "Tring Sport 1"
       ]
     },
     {
+      "id": "tehuaj",
       "name": "Te huaj",
-      "items": [
-        {
-          "name": "National Geographic HD",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262189.m3u8"
-        },
-        {
-          "name": "Discovery Channel HD",
-          "type": "video",
-          "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262191.m3u8"
-        }
+      "resources": [
+        "National Geographic HD",
+        "Discovery Channel HD"
       ]
     }
   ]
