Fixed manifest.json structure for Stremio

--- a/manifest.json
+++ b/manifest.json
@@ -55,7 +55,7 @@
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262191.m3u8"
     }
   ],
-  "categories": [
+  "types": [
     {
       "id": "gjenerale",
       "name": "Gjenerale",
