--- a/manifest.json
+++ b/manifest.json
@@ -5,61 +5,79 @@
   "description": "A Stremio addon to stream live Albanian TV channels",
   "resources": [
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Klan",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261956.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Top Channel",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261954.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Rtsh 1",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261964.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Rtsh 2",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/261965.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Film Aksion",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262027.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Tring Super",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262039.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Super Sport 2",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262222.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Tring Sport 1",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262243.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "National Geographic HD",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262189.m3u8"
     },
     {
-      "type": "video",
+      "type": "live_tv",
       "name": "Discovery Channel HD",
       "url": "http://a1.lion.wine:80/live/x9Kw7670/8cxU9044/262191.m3u8"
     }
   ],
   "types": [
-    "Gjenerale",
-    "Kombetare",
-    "Filma",
-    "Sport",
-    "Te huaj"
-  ]
+    "live_tv"
+  ],
+  "categories": {
+    "Gjenerale": [
+      "Klan",
+      "Top Channel"
+    ],
+    "Kombetare": [
+      "Rtsh 1",
+      "Rtsh 2"
+    ],
+    "Filma": [
+      "Film Aksion",
+      "Tring Super"
+    ],
+    "Sport": [
+      "Super Sport 2",
+      "Tring Sport 1"
+    ],
+    "Te huaj": [
+      "National Geographic HD",
+      "Discovery Channel HD"
+    ]
+  }
 }
